# sensores_avionica_g4_v0

./: .mxproject  CMakeLists.txt  README.md  STM32G473XX_FLASH.ld  arm-toolchain.cmake  en-hids  sensores_avionica_g4_v0.ioc
Core/Inc/: main.h  minmea.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  vectorNav.h
Core/Src/: fdcan.c  gpio.c  i2c.c  main.c  minmea.c  stm32g4xx_it.c  tim.c  usart.c  vectorNav.c
cmake/stm32cubemx/: CMakeLists.txt
midd/: CMakeLists.txt
midd/sensors/: pads.c  pads.h
midd/system/: interrupts.c  mcu.c  mcu.h
poc/: fdcan_test_end_to_end.c  fdcan_test_loopback.c
poc/VectorNav_VN100/: main.c
poc/blinking_led/: main.c
poc/fdcan_test/: main.c
poc/serial_communication/: main.c
poc/ublox_gnss/: main.c
poc/wsen_hids/: main.c
poc/wsen_isds/: main.c
poc/wsen_pads/: main.c
